--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@it-incubator/prettier-config": "^0.1.2",
+    "@react-email/components": "^0.0.7",
+    "@react-email/tailwind": "^0.0.8",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
@@ -25,11 +29,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-toastify": "^9.1.3",
+    "resend": "^1.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "prettier": "3.0.2",
-    "stylelint": "^15.10.3"
+    "prettier": "3.0.2"
   }
 }
